Add SEO metadata, sitemap, robots

--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="newlogo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StuMart</title>
+    <title>GVL Poly StuMart | AANM & VVRSR Polytechnic Student Marketplace</title>
+    <meta name="description" content="GVL Poly StuMart is a student marketplace for AANM & VVRSR Polytechnic (GVL). Buy and sell books, electronics, and academic essentials within campus." />
+    <meta name="keywords" content="gvl poly, gvlpoly, gvl polytechnic, gvlpolystumart, gvl poly stumart, aanm vvrsr polytechnic, aanm & vvrsr polytechnic marketplace, student marketplace" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://gvlpolymart.vercel.app/" />
+    <meta name="google-site-verification" content="kCVBN8wW0iS9NtEG1bbqyYD4c6_J8ErnLBrb85IdofQ" />
+    <meta property="og:site_name" content="GVLPOLYMART" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gvlpolymart.vercel.app/" />
+    <meta property="og:title" content="GVLPOLYMART – Student Marketplace for AANM & VVRSR Polytechnic" />
+    <meta property="og:description" content="Buy and sell academic items within AANM & VVRSR Polytechnic." />
+    <meta property="og:image" content="https://gvlpolymart.vercel.app/newlogotransparent.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GVLPOLYMART – Student Marketplace for AANM & VVRSR Polytechnic" />
+    <meta name="twitter:description" content="Buy and sell academic items within AANM & VVRSR Polytechnic." />
+    <meta name="twitter:image" content="https://gvlpolymart.vercel.app/newlogotransparent.png" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700;900&family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "GVL Poly StuMart",
+        "url": "https://gvlpolymart.vercel.app/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://gvlpolymart.vercel.app/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
