Clarify GVL Poly branding

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="newlogo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GVL Poly StuMart | AANM & VVRSR Polytechnic Student Marketplace</title>
+    <title>GVL Poly Student Marketplace | Buy & Sell for AANM & VVRSR Polytechnic</title>
     <meta name="description" content="GVL Poly StuMart is a student marketplace for AANM & VVRSR Polytechnic (GVL). Buy and sell books, electronics, and academic essentials within campus." />
     <meta name="keywords" content="gvl poly, gvlpoly, gvl polytechnic, gvlpolystumart, gvl poly stumart, aanm vvrsr polytechnic, aanm & vvrsr polytechnic marketplace, student marketplace" />
     <meta name="robots" content="index, follow" />
